# modquad-vi-sims

./: CMakeLists.txt  DOCUMENTATION.md  README.md
bash_file/: .track_experiment.sh.swp  land_modquad1.sh  loop1.sh  loop2.sh  loop_struct.sh  take_off_modquad1.sh  take_off_modquad2.sh  track_experiment.sh  track_static_experiment.sh  track_static_experiment_sim.sh
bash_file/important/: dock_experiment.sh  land_both.sh  offboard_arm.sh  take_off.sh
big_modquad/: CMakeLists.txt  INSTALL.md  README.md  package.xml
big_modquad/bash_files/: cmd.sh  dock_experiment.sh  land_struct.sh  offboard_arm.sh  take_off.sh  take_off_struct.sh
big_modquad/config/: multimaster_params.yaml  multimaster_params_modquad1.yaml  px4_config.yaml  px4_pluginlists.yaml
big_modquad/launch/: gazebo_modquad.launch  gazebo_modquad_2.launch  gazebo_modquad_hil.launch  modquad.launch  px4.launch  rpi_camera.launch  single_vehicle_spawn.launch
big_modquad/msg/: Waypoint.msg
big_modquad/scripts/: filter.py  modquad_init.py  pos_control.py  vision_assembler.py
config/: camera_module_v2.yaml  multimaster_params_modquad2.yaml  px4_config.yaml  px4_pluginlists.yaml
gazebo_magnet/: CMakeLists.txt  README.md  package.xml
gazebo_magnet/include/gazebo_magnet/: dipole_magnet.h  dipole_magnet_container.h  gazebo_ros_link_attacher.h
gazebo_magnet/launch/: magnet.launch
gazebo_magnet/src/: dipole_magnet.cc  gazebo_ros_link_attacher.cpp
gazebo_magnet/worlds/: magnet.world
launch/: master_sync.launch  modquad.launch  px4.launch  rpi_camera.launch  vicon_master_sync.launch  whycon_rpi.launch
mavros_plugins/: README.md  modquad_control.cpp
msg/: VisionOdom.msg  trajpoint.msg
scripts/: Arming.py  DisArm.py  Landing.py  filter.py  mini_ip.sh  modquad_init.py  modquad_node.py  pos_control.py  trans_qua_to_angle.py
src/: offb_node.cpp  offb_node.cpp.orig
srv/: dock.srv  flag.srv  set_group.srv  takeoff.srv  track.srv
(+37 files in other folders)
